src/test/ui/issues/issue-22933-2.stderr
error[E0599]: no variant named `PIE` found for type `Delicious` in the current scope
  --> $DIR/issue-22933-2.rs:14:44
   |
LL | enum Delicious {
   | -------------- variant `PIE` not found here
...
LL |     ApplePie = Delicious::Apple as isize | Delicious::PIE as isize,
   |                                            ^^^^^^^^^^^^^^ variant not found in `Delicious`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
